# site_parsers

./: README.md  app.py  exceptions.py  models.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
smolandshop/: __init__.py  parser.py  smolandshop_parser.py
