[tool.poetry]
name = "site-parsers"
version = "0.1.0"
description = ""
authors = ["vitaliy <vv.khritkin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.12.3"
lxml = "^5.1.0"
requests = "^2.31.0"
tqdm = "^4.66.2"
peewee = "^3.17.1"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
